--- a/index-7.html
+++ b/index-7.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,5 +32,28 @@
  }
  greet2(companyName);
     </script>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
+    <script>
+        var company=["Byte","Ror","Com","dsk"];
+      
+        function myFunctionD(s){
+            return console.log(" hello "+[s]+" How Are YOu")
+        }
+        for(var i=0;i<=3;i++){
+        myFunctionD(company[i]);
+        }
+
+    </script>
+    
 </body>
 </html>
